--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,16 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6915520733394127"
      crossorigin="anonymous"></script>
 
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2TKYTLDPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2TKYTLDPL');
+</script>
+
 <script
   src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
   crossorigin></script>
